[tool.poetry]
name = "langchain-mistral"
version = "0.1.0"
description = "GenAI apps with mistral LLM. Python version 3.11"
authors = ["Pramod Modi <pramodkmodi@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
langchain-mistralai = "^0.2.0"
mistralai = "^1.1.0"
langchain-community = "^0.3.3"
wikipedia = "^1.4.0"
pypdf = "^5.0.1"
langchain-chroma = "^0.1.4"
faiss-cpu = "^1.9.0"
torch = "2.2.2"
sentence-transformers = "^3.2.1"
langchain-huggingface = "^0.1.0"
ipykernel = "^6.29.5"
chroma = "^0.2.0"
tavily-python = "^0.5.0"
gradio = "^5.9.1"
phi = "^0.6.7"
phidata = "^2.7.5"
groq = "^0.13.1"
yfinance = "^0.2.51"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
